Restructure file and folder sytem

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
     @@include('./blocks/header.html')
     @@include('./blocks/hero-index.html')
+    @@include('./blocks/close-tours.html')
     @@include('./blocks/footer.html')
     <script src="./js/bundle.js"></script>
 </body>
