--- a/src/blocks/hero-index.html
+++ b/src/blocks/hero-index.html
@@ -1,7 +1,7 @@
 <section class="hero hero-index">
-    <div class="hero__text">
+    <div class="hero__text container">
         <img class="hero__icon" src="./img/sun.svg" alt="sun">
         <h1 class="hero__title">Путешествия и регаты на парусной яхте</h1>
-        <a class="hero__link" href="tours.html">ПОДОБРАТЬ ТУР</a>
+        <a class="hero__btn" href="tours.html">ПОДОБРАТЬ ТУР</a>
     </div>
 </section>
