update tour cards

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 <body>
     @@include('./blocks/header.html')
     @@include('./blocks/hero-index.html')
-    @@include('./blocks/close-tours.html')
+    @@include('./blocks/closest-tours.html')
     @@include('./blocks/footer.html')
-    <script src="./js/bundle.js"></script>
+    <script src="./static/js/bundle.js"></script>
 </body>
 
 </html>
