--- a/src/blocks/head.html
+++ b/src/blocks/head.html
@@ -5,6 +5,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="stylesheet" href="./static/css/style.min.css">
     <title>@@title</title>
 </head>
