--- a/src/blocks/header.html
+++ b/src/blocks/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="header__inner">
         <div class="header__logo">
-            <img class="logo" src="./img/logo.svg" alt="Logo">
+            <img class="logo" src="./static/img/logo.svg" alt="Logo">
         </div>
         <nav class="header__nav">
             <a class="header__nav-link header__nav-link--active" href="tours.html">ПУТЕШЕСТВИЯ</a>
